# shobdo-hotao

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml
.claude/skills/frutiger-aero-ui/: SKILL.md
.github/workflows/: build-release.yml
docs/: ARCHITECTURE.md  AUDIT.md  PRODUCT_SPEC.md  ROADMAP.md
installer/: shobdohotao.iss
scripts/: build_windows.ps1  make_icon.py  run_windows.ps1  setup_windows.ps1
src/shobdohotao/: __init__.py  __main__.py  config.py  domain.py
src/shobdohotao/i18n/: __init__.py  bn.py  en.py
src/shobdohotao/media/: __init__.py  ffmpeg_runner.py  probe.py  video_extractor.py  video_muxer.py
src/shobdohotao/platform/: __init__.py  file_actions.py
src/shobdohotao/services/: __init__.py  denoise_backend.py  events.py  ffmpeg_service.py  logging_service.py  media_probe.py  pipeline.py  video_processing_service.py
src/shobdohotao/storage/: __init__.py  app_paths.py  filename_validator.py  storage_service.py
src/shobdohotao/ui/: activity_format.py  format.py  main_window.py  stepper_model.py  workers_glue.py
src/shobdohotao/ui/controllers/: __init__.py  (+1 more)
src/shobdohotao/workers/: probe_worker.py  processing_worker.py  video_worker.py
tests/: conftest.py  test_app_paths.py  test_denoise_backend.py  test_domain.py  test_ffmpeg_service.py  test_file_actions.py  test_filename_validator.py  test_format.py  test_i18n.py  test_pipeline.py  test_processing_stage.py  test_storage_service.py  test_ui_views.py  test_ui_widgets.py  test_video_commands.py  test_video_integration.py  test_video_service.py
(+18 files in other folders)
